fix: Aligns receive funds to the designs
This makes the read only fields look like inputs again, which I don't
really dig, but it's what zeplin sez. :)

--- a/backend/sass/common.blocks/_labeled-input.scss
+++ b/backend/sass/common.blocks/_labeled-input.scss
@@ -30,11 +30,6 @@
   margin-bottom: 0px;
 }
 
-input.labeled-input__input:disabled {
-  background: transparent;
-  border: 0;
-}
-
 .labeled-input__input {
   @extend .input_type_secondary;
   width: 100%;
